--- a/front-vite/src/App.css
+++ b/front-vite/src/App.css
@@ -1,3 +1,4 @@
 body{
-    background-color: rgb(234, 251, 255);
+    /* background-color: rgb(35, 38, 39); */
+    background : linear-gradient(to bottom right,#CED4DAA1,#64ADDEA1)
 }
