--- a/front-vite/src/components/lastmovements.css
+++ b/front-vite/src/components/lastmovements.css
@@ -3,6 +3,8 @@
     align-items: center;
     gap: 5px;
     max-width: 300px;
+    background-color: #EEEEEE ;
+    padding: 1rem;
 }
 .img-last-movements{
     width: 45px;
