--- a/front-vite/src/components/lastmovements.css
+++ b/front-vite/src/components/lastmovements.css
@@ -2,7 +2,8 @@
     display: flex;
     align-items: center;
     gap: 5px;
-    max-width: 300px;
+    max-width: 360px;
+    min-width: 300px;
     background-color: #EEEEEE ;
     padding: 1rem;
 }
